popover on places

--- a/js/i18n/strings_en.properties
+++ b/js/i18n/strings_en.properties
@@ -4,7 +4,10 @@ h1_homepage=Hongkai Liu\u2019s Homepage
 a_home=home
 a_contact=contact
 h2_you_know=you know \u2026
-d_place=Montreal \u2190 Beijing \u2190 Dresden \u2190 Anshan
+s_mtl=Montreal
+s_bj=Beijing
+s_dd=Dresden
+s_as=Anshan
 d_jp=Java Programmer
 a_resume=resume
 a_pub=publications
