--- a/js/i18n/strings_zh.properties
+++ b/js/i18n/strings_zh.properties
@@ -4,7 +4,10 @@ h1_homepage=刘宏凯的主页
 a_home=主页
 a_contact=找我
 h2_you_know=你懂的\u2026
-d_place=蒙特利尔 \u2190 北京 \u2190 德累斯顿 \u2190 鞍山
+s_mtl=蒙特利尔
+s_bj=北京
+s_dd=德累斯顿
+s_as=鞍山
 d_jp=Java码农
 a_resume=简历
 a_pub=论文
