--- a/js/i18n/strings_en.properties
+++ b/js/i18n/strings_en.properties
@@ -8,7 +8,7 @@ s_mtl=Montreal
 s_bj=Beijing
 s_dd=Dresden
 s_as=Anshan
-d_jp=Java Programmer
+d_jt=Software Engineer
 a_resume=resume
 a_pub=publications
 h2_w_t_f_m=where to find me \u2026
